# optistock

./: README.md  pyproject.toml  requirements.txt
GCP_uploads/: upload_csv_to_bigquery.py
jsons_example/: 1_ex.json  2_ex.json
queries/: rolling_inventory.sql
scraping/: batch_upload.py  bolier_plate.py  bolier_plate_fixed.py  config.py  download_query_inventory.py  download_query_inventory_warehouse.py  download_query_movements.py  download_query_purchases.py  download_query_sales.py  example_upload.py
test_jsons/: debug_output.json  debug_output_n.json  inventory_response.json  items.json  output.json
