[tool.poetry]
name = "optistock-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
pandas = "^2.3.1"
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = "^2.25.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
